--- a/tryton.cfg
+++ b/tryton.cfg
@@ -2,5 +2,8 @@
 version=3.4.0
 depends:
     stock_picking
+extras_depend:
+    stock_picking_carrier
+    stock_picking_kit
 xml:
     shipment.xml
